@@ -2,6 +2,8 @@ Version 1.19.2 *
 ==================
 - fixed usage of ISO-8859-1 for license file paths on Windows
 - fixed unsorted files in project subfolder
+- fixed closing Connect editor and Studio on saving connect file
+- improved plain text views for Connect and Solver Option editor by using a fixed font
 - improved license file line separator and trailing whitespaces
 
 Version 1.19.1
